Implement rest client
